# SYSZUX-FACE

./: CMakeLists.txt  README.md
deepvac_zoo/: face_retina.deepvac
lib/: syszux_detect_face.cpp  syszux_detect_face.h
src/: main.cpp
